objects/network-policies/deny-all-for-a-pod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-to-pod
spec:
  podSelector:
    matchLabels:
      role: sus
  policyTypes:
  - Ingress
  - Egress
