objects/network-policies/except-ipblock.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: except-ipblock
spec:
  podSelector:
    matchLabels:
      role: database
  ingress:
  - from:
    - ipBlock:
        cidr: 172.17.0.0/16
        except: 
        - 172.17.1.0/24
  policyTypes:
  - Ingress
